# claude-code-provenance-verification

./: pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.github/workflows/: basic-test.yml  multi-model-ci.yml  quality-gates.yml
scripts/: generate_ci_report.py  generate_compatibility_report.py
src/hooks/: response_claim_validator_hook.py
src/mcp_server/: provenance_mcp_server.py
src/proofs/: .Makefile.d  .provenance_architecture_proof.aux  .provenance_extraction.aux  .provenance_minimal.aux  .provenance_proof_simple.aux  Makefile.conf  _CoqProject  provenance_architecture_proof.glob  provenance_architecture_proof.v  provenance_architecture_proof.vo  provenance_extraction.glob  provenance_extraction.v  provenance_extraction.vo  provenance_minimal.glob  provenance_minimal.v  provenance_minimal.vo  provenance_proof_simple.glob  provenance_proof_simple.v  provenance_system.mli
src/provenance_verification/: __init__.py
tests/assistant_integration/: test_basic_claim_detection.py  test_complex_claim_patterns.py  test_false_positive_handling.py  test_performance_benchmarks.py
tests/integration/: test_claude_code_hooks.py  test_e2e_workflows.py  test_mcp_server.py
tests/model_testing/: test_claim_detection.py  test_evidence_verification.py
tests/security/: test_evidence_tampering.py  test_prompt_injection.py
tests/unit/: test_basic.py
