[build-system]
requires = [
    "setuptools==68.2.2",
    "wheel",
    "cython==0.29.36"
]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-verification"
version = "0.1.0"
description = "Real-time AI claim validation using formal mathematical proofs"
authors = [
    {name = "qizwiz", email = "jonathan.f.hill@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "requests", 
    "typing-extensions",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["provenance_verification*", "hooks*", "mcp_server*"]

[tool.setuptools.package-dir]
"" = "src"